--- a/bower.json
+++ b/bower.json
@@ -3,6 +3,18 @@
   "version": "2.0.0-preview",
   "description": "An element to render headers edior based on AMF data model",
   "main": "api-headers-editor.html",
+  "license": "Apache-2.0",
+  "authors": [
+    "Pawel Psztyc",
+    "The Advanced REST client authors <arc@mulesoft.com>"
+  ],
+  "keywords": [
+    "web-components",
+    "polymer",
+    "raml",
+    "headers",
+    "editor"
+  ],
   "dependencies": {
     "polymer": "Polymer/polymer#^2.0.0",
     "paper-icon-button": "PolymerElements/paper-icon-button#^2.1.0",
@@ -20,9 +32,15 @@
     "iron-demo-helpers": "PolymerElements/iron-demo-helpers#^2.0.0",
     "web-component-tester": "Polymer/web-component-tester#^6.0.0",
     "webcomponentsjs": "webcomponents/webcomponentsjs#^1.0.0",
-    "iron-test-helpers": "PolymerElements/iron-test-helpers#^2.0.0"
+    "iron-test-helpers": "PolymerElements/iron-test-helpers#^2.0.0",
+    "iron-component-page": "^3.0.1"
   },
-  "resolutions": {
-    "polymer": "^2.0.0"
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:advanced-rest-client/api-headers-editor.git"
+  },
+  "bugs": {
+    "url": "https://github.com/advanced-rest-client/api-headers-editor/issues",
+    "email": "arc@mulesoft.com"
   }
 }
