Added common styles

--- a/bower.json
+++ b/bower.json
@@ -26,7 +26,8 @@
     "code-mirror-hint": "advanced-rest-client/code-mirror-hint#^1.0.0",
     "headers-parser-behavior": "advanced-rest-client/headers-parser-behavior#^2.0.0",
     "events-target-behavior": "advanced-rest-client/events-target-behavior#^2.0.0",
-    "clipboard-copy": "advanced-rest-client/clipboard-copy#^2.0.0"
+    "clipboard-copy": "advanced-rest-client/clipboard-copy#^2.0.0",
+    "api-form-mixin": "advanced-rest-client/api-form-mixin#2.0.0-preview"
   },
   "devDependencies": {
     "iron-demo-helpers": "PolymerElements/iron-demo-helpers#^2.0.0",
