--- a/bower.json
+++ b/bower.json
@@ -24,7 +24,7 @@
     "code-mirror": "advanced-rest-client/code-mirror#2.0.0-preview",
     "iron-flex-layout": "PolymerElements/iron-flex-layout#^2.0.0",
     "code-mirror-hint": "advanced-rest-client/code-mirror-hint#^1.0.0",
-    "headers-parser-behavior": "advanced-rest-client/headers-parser-behavior#^2.0.0",
+    "headers-parser-behavior": "advanced-rest-client/headers-parser-behavior#2.0.0-preview",
     "events-target-behavior": "advanced-rest-client/events-target-behavior#^2.0.0",
     "clipboard-copy": "advanced-rest-client/clipboard-copy#^2.0.0",
     "api-form-mixin": "advanced-rest-client/api-form-mixin#2.0.0-preview"
@@ -34,7 +34,8 @@
     "web-component-tester": "Polymer/web-component-tester#^6.0.0",
     "webcomponentsjs": "webcomponents/webcomponentsjs#^1.0.0",
     "iron-test-helpers": "PolymerElements/iron-test-helpers#^2.0.0",
-    "iron-component-page": "^3.0.1"
+    "iron-component-page": "^3.0.1",
+    "paper-checkbox": "PolymerElements/paper-checkbox#^2.0.2"
   },
   "repository": {
     "type": "git",
