--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "api-headers-editor.html",
   "license": "Apache-2.0",
   "devDependencies": {
-    "@polymer/gen-typescript-declarations": "^1.1.1",
-    "bower": "^1.8.0"
+    "@polymer/gen-typescript-declarations": "^1.1.1"
   },
   "private": false,
   "scripts": {
