Updating npm scripts

--- a/package.json
+++ b/package.json
@@ -9,10 +9,9 @@
   },
   "private": false,
   "scripts": {
-    "serve": "node_modules/.bin/polymer serve",
-    "lint": "node_modules/.bin/polymer lint paper-autocomplete.html --rules polymer-1",
-    "test-sauce": "node_modules/.bin/polymer test --plugin sauce --job-name \"paper-autocomplete:local-test\"",
-    "test": "node_modules/.bin/polymer test --plugin local",
+    "lint": "polymer lint api-headers-editor.html",
+    "test-sauce": "polymer test --plugin sauce --job-name \"api-headers-editor:local-test\"",
+    "test": "polymer test --plugin local",
     "update-types": "bower install && gen-typescript-declarations --deleteExisting --outDir ."
   },
   "repository": {
