--- a/bower.json
+++ b/bower.json
@@ -27,7 +27,8 @@
     "headers-parser-behavior": "advanced-rest-client/headers-parser-behavior#^2.0.0",
     "events-target-behavior": "advanced-rest-client/events-target-behavior#^2.0.0",
     "clipboard-copy": "advanced-rest-client/clipboard-copy#^2.0.0",
-    "api-form-mixin": "advanced-rest-client/api-form-mixin#2.0.0-preview"
+    "api-form-mixin": "advanced-rest-client/api-form-mixin#2.0.0-preview",
+    "raml-aware": "advanced-rest-client/raml-aware#2.0.0-preview"
   },
   "devDependencies": {
     "iron-demo-helpers": "PolymerElements/iron-demo-helpers#^2.0.0",
