--- a/bower.json
+++ b/bower.json
@@ -28,7 +28,8 @@
     "events-target-behavior": "advanced-rest-client/events-target-behavior#^2.0.0",
     "clipboard-copy": "advanced-rest-client/clipboard-copy#^2.0.0",
     "api-form-mixin": "advanced-rest-client/api-form-mixin#2.0.0-preview",
-    "raml-aware": "advanced-rest-client/raml-aware#2.0.0-preview"
+    "raml-aware": "advanced-rest-client/raml-aware#2.0.0-preview",
+    "iron-validatable-behavior": "PolymerElements/iron-validatable-behavior#^2.1.0"
   },
   "devDependencies": {
     "iron-demo-helpers": "PolymerElements/iron-demo-helpers#^2.0.0",
