--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "api-headers-editor",
-  "version": "2.0.0-preview",
+  "version": "2.0.0",
   "description": "An element to render headers edior based on AMF data model",
   "main": "api-headers-editor.html",
   "license": "Apache-2.0",
@@ -18,17 +18,17 @@
   "dependencies": {
     "polymer": "Polymer/polymer#^2.0.0",
     "paper-icon-button": "PolymerElements/paper-icon-button#^2.1.0",
-    "api-headers-form": "advanced-rest-client/api-headers-form#2.0.0-preview",
-    "api-view-model-transformer": "advanced-rest-client/api-view-model-transformer#2.0-preview",
+    "api-headers-form": "advanced-rest-client/api-headers-form#^2.0.0",
+    "api-view-model-transformer": "advanced-rest-client/api-view-model-transformer#^2.0.0",
     "arc-icons": "advanced-rest-client/arc-icons#^2.0.0",
-    "code-mirror": "advanced-rest-client/code-mirror#2.0.0-preview",
+    "code-mirror": "advanced-rest-client/code-mirror#^2.0.0",
     "iron-flex-layout": "PolymerElements/iron-flex-layout#^2.0.0",
     "code-mirror-hint": "advanced-rest-client/code-mirror-hint#^1.0.0",
     "headers-parser-behavior": "advanced-rest-client/headers-parser-behavior#^2.0.0",
     "events-target-behavior": "advanced-rest-client/events-target-behavior#^2.0.0",
     "clipboard-copy": "advanced-rest-client/clipboard-copy#^2.0.0",
-    "api-form-mixin": "advanced-rest-client/api-form-mixin#2.0.0-preview",
-    "raml-aware": "advanced-rest-client/raml-aware#2.0.0-preview",
+    "api-form-mixin": "advanced-rest-client/api-form-mixin#^2.0.0",
+    "raml-aware": "advanced-rest-client/raml-aware#^2.0.0",
     "iron-validatable-behavior": "PolymerElements/iron-validatable-behavior#^2.1.0"
   },
   "devDependencies": {
