--- a/package.json
+++ b/package.json
@@ -1,26 +1,69 @@
 {
-  "name": "@api-components/api-headers-editor",
-  "version": "2.0.12",
   "description": "HTTP headers form build from AMF json/ld model",
-  "main": "api-headers-editor.html",
-  "license": "Apache-2.0",
-  "devDependencies": {
-    "@api-components/api-model-generator": "^0.1.8",
-    "@polymer/gen-typescript-declarations": "^1.6.0"
-  },
-  "private": false,
-  "scripts": {
-    "lint": "polymer lint api-headers-editor.html",
-    "test-sauce": "polymer test --plugin sauce --job-name \"api-headers-editor:local-test\"",
-    "test": "polymer test --plugin local",
-    "update-types": "bower install && gen-typescript-declarations --deleteExisting --outDir ."
-  },
+  "keywords": [
+    "web-components",
+    "polymer",
+    "raml",
+    "headers",
+    "editor"
+  ],
   "repository": {
     "type": "git",
     "url": "git://github.com/advanced-rest-client/api-headers-editor.git"
   },
+  "name": "@api-components/api-headers-editor",
+  "version": "3.0.0-preview.1",
+  "main": "api-headers-editor.js",
+  "license": "Apache-2.0",
+  "devDependencies": {
+    "@advanced-rest-client/arc-electron-default-theme": "^3.0.0-preview.1",
+    "@api-components/api-model-generator": "^0.1.10",
+    "@api-components/api-navigation": "^3.0.0-preview.1",
+    "@polymer/gen-typescript-declarations": "^1.6.0",
+    "@polymer/iron-component-page": "^4.0.0",
+    "@polymer/iron-demo-helpers": "^3.0.0",
+    "@polymer/iron-test-helpers": "^3.0.0",
+    "@polymer/paper-dropdown-menu": "^3.0.0",
+    "@polymer/paper-item": "^3.0.0",
+    "@polymer/paper-listbox": "^3.0.0",
+    "@polymer/paper-toggle-button": "^3.0.0",
+    "@polymer/test-fixture": "^4.0.2",
+    "@webcomponents/webcomponentsjs": "^2.0.0",
+    "chai": "^4.2.0",
+    "mocha": "^5.2.0",
+    "sinon": "^7.2.3",
+    "wct-mocha": "^1.0.0",
+    "web-animations-js": "^2.3.1"
+  },
+  "scripts": {
+    "lint": "polymer lint api-headers-editor.html",
+    "test-sauce": "polymer test --plugin sauce --job-name \"api-headers-editor:local-test\"",
+    "test": "polymer test --plugin local",
+    "update-types": "gen-typescript-declarations --deleteExisting --outDir ."
+  },
   "bugs": {
     "url": "https://github.com/advanced-rest-client/api-headers-editor/issues",
     "email": "arc@mulesoft.com"
+  },
+  "contributors": [
+    "Pawel Psztyc",
+    "The Advanced REST client authors <arc@mulesoft.com>"
+  ],
+  "dependencies": {
+    "@advanced-rest-client/arc-icons": "^3.0.0-preview.1",
+    "@advanced-rest-client/code-mirror": "^3.0.0-preview.1",
+    "@advanced-rest-client/code-mirror-hint": "^3.0.0-preview.1",
+    "@advanced-rest-client/events-target-mixin": "^3.0.0-preview.1",
+    "@advanced-rest-client/headers-parser-mixin": "^3.0.0-preview.2",
+    "@api-components/amf-helper-mixin": "^3.0.0-preview.1",
+    "@api-components/api-form-mixin": "^3.0.0-preview.1",
+    "@api-components/api-headers-form": "^3.0.0-preview.1",
+    "@api-components/api-view-model-transformer": "^3.0.0-preview.1",
+    "@api-components/clipboard-copy": "^3.0.0-preview.1",
+    "@api-components/raml-aware": "^3.0.0-preview.1",
+    "@polymer/iron-flex-layout": "^3.0.0",
+    "@polymer/iron-validatable-behavior": "^3.0.0",
+    "@polymer/paper-icon-button": "^3.0.0",
+    "@polymer/polymer": "^3.0.0"
   }
 }
