--- a/package.json
+++ b/package.json
@@ -1,69 +1,99 @@
 {
+  "name": "@api-components/api-headers-editor",
   "description": "HTTP headers form build from AMF json/ld model",
+  "version": "3.0.0",
+  "main": "api-headers-editor.js",
+  "license": "Apache-2.0",
   "keywords": [
     "web-components",
-    "polymer",
     "raml",
+    "oas",
+    "api",
     "headers",
     "editor"
+  ],
+  "authors": [
+    "Pawel Psztyc",
+    "The Advanced REST client authors <arc@mulesoft.com>"
+  ],
+  "contributors": [
+    "Pawel Psztyc",
+    "The Advanced REST client authors <arc@mulesoft.com>"
   ],
   "repository": {
     "type": "git",
     "url": "git://github.com/advanced-rest-client/api-headers-editor.git"
   },
-  "name": "@api-components/api-headers-editor",
-  "version": "3.0.0-preview.3",
-  "main": "api-headers-editor.js",
-  "license": "Apache-2.0",
+  "bugs": {
+    "url": "https://github.com/advanced-rest-client/api-headers-editor/issues",
+    "email": "arc@mulesoft.com"
+  },
+  "dependencies": {
+    "@advanced-rest-client/arc-icons": "^3.0.0",
+    "@advanced-rest-client/clipboard-copy": "^3.0.1",
+    "@advanced-rest-client/code-mirror": "^3.0.0",
+    "@advanced-rest-client/code-mirror-hint": "^3.0.0-preview.2",
+    "@advanced-rest-client/events-target-mixin": "^3.0.0",
+    "@advanced-rest-client/headers-parser-mixin": "^3.0.0",
+    "@anypoint-web-components/validatable-mixin": "^1.0.1",
+    "@anypoint-web-components/anypoint-button": "^1.0.3",
+    "@api-components/amf-helper-mixin": "^3.0.2",
+    "@api-components/api-form-mixin": "^3.0.0",
+    "@api-components/api-headers-form": "^3.0.0-preview.2",
+    "@api-components/api-view-model-transformer": "^3.0.1",
+    "@api-components/raml-aware": "^3.0.0",
+    "lit-element": "^2.0.1",
+    "lit-html": "^1.1.2"
+  },
   "devDependencies": {
-    "@advanced-rest-client/arc-electron-default-theme": "^3.0.0-preview.2",
-    "@api-components/api-model-generator": "^0.1.10",
-    "@api-components/api-navigation": "^3.0.0-preview.2",
-    "@polymer/gen-typescript-declarations": "^1.6.0",
-    "@polymer/iron-component-page": "^4.0.0",
-    "@polymer/iron-demo-helpers": "^3.1.0",
+    "@advanced-rest-client/arc-demo-helper": "^1.0.12",
+    "@advanced-rest-client/eslint-config": "^1.0.6",
+    "@advanced-rest-client/prettier-config": "^0.1.0",
+    "@advanced-rest-client/testing-karma-sl": "^1.0.3",
+    "@advanced-rest-client/arc-electron-default-theme": "^3.0.0-preview.3",
+    "@api-components/api-model-generator": "^0.1.12",
+    "@api-components/api-navigation": "^3.0.3",
+    "@commitlint/cli": "^8.1.0",
+    "@commitlint/config-conventional": "^7.0.0",
+    "@open-wc/testing": "^2.2.8",
+    "@open-wc/testing-karma": "^3.1.18",
+    "@polymer/gen-typescript-declarations": "^1.6.2",
     "@polymer/iron-test-helpers": "^3.0.0",
     "@polymer/paper-dropdown-menu": "^3.0.0",
     "@polymer/paper-item": "^3.0.0",
     "@polymer/paper-listbox": "^3.0.0",
     "@polymer/paper-toggle-button": "^3.0.0",
     "@polymer/test-fixture": "^4.0.2",
-    "@webcomponents/webcomponentsjs": "^2.0.0",
-    "chai": "^4.2.0",
-    "mocha": "^5.2.0",
-    "sinon": "^7.3.0",
-    "wct-mocha": "^1.0.0",
+    "@webcomponents/webcomponentsjs": "^2.2.10",
+    "deepmerge": "^4.0.0",
+    "es-dev-server": "^1.12.0",
+    "husky": "^1.0.0",
+    "karma": "^4.2.0",
+    "lint-staged": "^9.2.1",
+    "sinon": "^7.4.1",
     "web-animations-js": "^2.3.1"
   },
   "scripts": {
-    "lint": "polymer lint api-headers-editor.html",
-    "test-sauce": "polymer test --plugin sauce --job-name \"api-headers-editor:local-test\"",
-    "test": "polymer test --plugin local",
-    "update-types": "gen-typescript-declarations --deleteExisting --outDir ."
+    "test": "karma start --coverage",
+    "update-types": "gen-typescript-declarations --deleteExisting --outDir .",
+    "start": "es-dev-server --app-index demo/index.html --node-resolve --open --watch",
+    "start:compatibility": "es-dev-server --app-index demo/index.html --compatibility all --node-resolve --open --watch",
+    "lint:eslint": "eslint --ext .js,.html .",
+    "format:eslint": "eslint --ext .js,.html . --fix",
+    "lint:prettier": "prettier \"**/*.js\" --list-different || (echo '↑↑ these files are not prettier formatted ↑↑' && exit 1)",
+    "format:prettier": "prettier \"**/*.js\" --write",
+    "lint": "npm run lint:eslint && npm run lint:prettier",
+    "format": "npm run format:eslint && npm run format:prettier",
+    "test:watch": "karma start --auto-watch=true --single-run=false",
+    "test:legacy": "karma start --legacy --coverage",
+    "test:legacy:watch": "karma start --legacy --auto-watch=true --single-run=false",
+    "test:sl": "karma start karma.sl.config.js --legacy --coverage",
+    "generate-model": "node demo/model.js"
   },
-  "bugs": {
-    "url": "https://github.com/advanced-rest-client/api-headers-editor/issues",
-    "email": "arc@mulesoft.com"
-  },
-  "contributors": [
-    "Pawel Psztyc",
-    "The Advanced REST client authors <arc@mulesoft.com>"
-  ],
-  "dependencies": {
-    "@advanced-rest-client/arc-icons": "^3.0.0-preview.2",
-    "@advanced-rest-client/clipboard-copy": "^3.0.0-preview.1",
-    "@advanced-rest-client/code-mirror": "^3.0.0-preview.1",
-    "@advanced-rest-client/code-mirror-hint": "^3.0.0-preview.1",
-    "@advanced-rest-client/events-target-mixin": "^3.0.0-preview.2",
-    "@advanced-rest-client/headers-parser-mixin": "^3.0.0-preview.2",
-    "@api-components/amf-helper-mixin": "^3.0.0-preview.1",
-    "@api-components/api-form-mixin": "^3.0.0-preview.1",
-    "@api-components/api-headers-form": "^3.0.0-preview.1",
-    "@api-components/api-view-model-transformer": "^3.0.0-preview.1",
-    "@api-components/raml-aware": "^3.0.0-preview.1",
-    "@polymer/iron-flex-layout": "^3.0.0",
-    "@polymer/iron-validatable-behavior": "^3.0.0",
-    "@polymer/paper-icon-button": "^3.0.0",
-    "@polymer/polymer": "^3.2.0"
+  "lint-staged": {
+    "*.js": [
+      "eslint --fix",
+      "git add"
+    ]
   }
 }
