--- a/package.json
+++ b/package.json
@@ -29,28 +29,26 @@
     "email": "arc@mulesoft.com"
   },
   "dependencies": {
-    "@advanced-rest-client/arc-icons": "^3.0.0",
     "@advanced-rest-client/clipboard-copy": "^3.0.1",
     "@advanced-rest-client/code-mirror": "^3.0.0",
     "@advanced-rest-client/code-mirror-hint": "^3.0.0-preview.2",
     "@advanced-rest-client/events-target-mixin": "^3.0.0",
     "@advanced-rest-client/headers-parser-mixin": "^3.0.0",
-    "@anypoint-web-components/validatable-mixin": "^1.0.1",
     "@anypoint-web-components/anypoint-button": "^1.0.3",
+    "@anypoint-web-components/validatable-mixin": "^1.0.1",
     "@api-components/amf-helper-mixin": "^3.0.2",
-    "@api-components/api-form-mixin": "^3.0.0",
-    "@api-components/api-headers-form": "^3.0.0-preview.2",
+    "@api-components/api-form-mixin": "^3.0.3",
+    "@api-components/api-headers-form": "^3.0.0",
     "@api-components/api-view-model-transformer": "^3.0.1",
     "@api-components/raml-aware": "^3.0.0",
     "lit-element": "^2.0.1",
     "lit-html": "^1.1.2"
   },
   "devDependencies": {
-    "@advanced-rest-client/arc-demo-helper": "^1.0.12",
+    "@advanced-rest-client/arc-demo-helper": "^1.0.14",
     "@advanced-rest-client/eslint-config": "^1.0.6",
     "@advanced-rest-client/prettier-config": "^0.1.0",
     "@advanced-rest-client/testing-karma-sl": "^1.0.3",
-    "@advanced-rest-client/arc-electron-default-theme": "^3.0.0-preview.3",
     "@api-components/api-model-generator": "^0.1.12",
     "@api-components/api-navigation": "^3.0.3",
     "@commitlint/cli": "^8.1.0",
@@ -59,19 +57,12 @@
     "@open-wc/testing-karma": "^3.1.18",
     "@polymer/gen-typescript-declarations": "^1.6.2",
     "@polymer/iron-test-helpers": "^3.0.0",
-    "@polymer/paper-dropdown-menu": "^3.0.0",
-    "@polymer/paper-item": "^3.0.0",
-    "@polymer/paper-listbox": "^3.0.0",
-    "@polymer/paper-toggle-button": "^3.0.0",
-    "@polymer/test-fixture": "^4.0.2",
-    "@webcomponents/webcomponentsjs": "^2.2.10",
     "deepmerge": "^4.0.0",
     "es-dev-server": "^1.12.0",
     "husky": "^1.0.0",
     "karma": "^4.2.0",
     "lint-staged": "^9.2.1",
-    "sinon": "^7.4.1",
-    "web-animations-js": "^2.3.1"
+    "sinon": "^7.4.1"
   },
   "scripts": {
     "test": "karma start --coverage",
