--- a/package.json
+++ b/package.json
@@ -34,35 +34,35 @@
     "@advanced-rest-client/code-mirror-hint": "^3.0.0",
     "@advanced-rest-client/events-target-mixin": "^3.0.0",
     "@advanced-rest-client/headers-parser-mixin": "^3.0.0",
-    "@anypoint-web-components/anypoint-button": "^1.0.4",
-    "@anypoint-web-components/validatable-mixin": "^1.0.1",
-    "@api-components/amf-helper-mixin": "^3.1.3",
+    "@anypoint-web-components/anypoint-button": "^1.0.11",
+    "@anypoint-web-components/validatable-mixin": "^1.0.2",
+    "@api-components/amf-helper-mixin": "^3.1.7",
     "@api-components/api-form-mixin": "^3.0.3",
-    "@api-components/api-headers-form": "^3.0.2",
-    "@api-components/api-view-model-transformer": "^3.0.4",
+    "@api-components/api-headers-form": "^3.0.4",
+    "@api-components/api-view-model-transformer": "^3.0.5",
     "@api-components/raml-aware": "^3.0.0",
     "lit-element": "^2.0.1",
     "lit-html": "^1.1.2"
   },
   "devDependencies": {
     "@advanced-rest-client/arc-demo-helper": "^1.0.14",
-    "@advanced-rest-client/eslint-config": "^1.1.2",
+    "@advanced-rest-client/eslint-config": "^1.1.3",
     "@advanced-rest-client/prettier-config": "^0.1.0",
-    "@advanced-rest-client/testing-karma-sl": "^1.0.4",
-    "@api-components/api-model-generator": "^0.1.12",
-    "@api-components/api-navigation": "^3.0.3",
-    "@commitlint/cli": "^8.1.0",
-    "@commitlint/config-conventional": "^7.0.0",
-    "@open-wc/testing": "^2.3.2",
-    "@open-wc/testing-karma": "^3.1.24",
+    "@advanced-rest-client/testing-karma-sl": "^1.0.5",
+    "@api-components/api-model-generator": "^0.1.13",
+    "@api-components/api-navigation": "^3.1.2",
+    "@commitlint/cli": "^8.2.0",
+    "@commitlint/config-conventional": "^8.2.0",
+    "@open-wc/testing": "^2.3.4",
+    "@open-wc/testing-karma": "^3.1.38",
     "@polymer/gen-typescript-declarations": "^1.6.2",
     "@polymer/iron-test-helpers": "^3.0.0",
-    "deepmerge": "^4.0.0",
-    "es-dev-server": "^1.14.2",
-    "husky": "^1.0.0",
-    "karma": "^4.2.0",
-    "lint-staged": "^9.2.3",
-    "sinon": "^7.4.1"
+    "deepmerge": "^4.1.1",
+    "es-dev-server": "^1.18.3",
+    "husky": "^3.0.0",
+    "karma": "^4.3.0",
+    "lint-staged": "^9.4.2",
+    "sinon": "^7.5.0"
   },
   "scripts": {
     "test": "karma start --coverage",
@@ -76,9 +76,9 @@
     "lint": "npm run lint:eslint && npm run lint:prettier",
     "format": "npm run format:eslint && npm run format:prettier",
     "test:watch": "karma start --auto-watch=true --single-run=false",
-    "test:legacy": "karma start --legacy --coverage",
-    "test:legacy:watch": "karma start --legacy --auto-watch=true --single-run=false",
-    "test:sl": "karma start karma.sl.config.js --legacy --coverage",
+    "test:legacy": "karma start --compatibility all --coverage",
+    "test:legacy:watch": "karma start --compatibility all --auto-watch=true --single-run=false",
+    "test:sl": "karma start karma.sl.config.js --compatibility all --coverage",
     "generate-model": "node demo/model.js"
   },
   "lint-staged": {
