--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@api-components/api-headers-editor",
   "description": "HTTP headers form build from AMF json/ld model",
-  "version": "3.0.4",
+  "version": "4.0.0",
   "main": "api-headers-editor.js",
   "license": "Apache-2.0",
   "keywords": [
@@ -34,32 +34,32 @@
     "@advanced-rest-client/code-mirror-hint": "^3.0.0",
     "@advanced-rest-client/events-target-mixin": "^3.0.0",
     "@advanced-rest-client/headers-parser-mixin": "^3.0.0",
-    "@anypoint-web-components/anypoint-button": "^1.0.11",
+    "@anypoint-web-components/anypoint-button": "^1.0.12",
     "@anypoint-web-components/validatable-mixin": "^1.0.2",
-    "@api-components/amf-helper-mixin": "^3.1.7",
+    "@api-components/amf-helper-mixin": "^4.0.13",
     "@api-components/api-form-mixin": "^3.0.3",
-    "@api-components/api-headers-form": "^3.0.4",
-    "@api-components/api-view-model-transformer": "^3.0.5",
+    "@api-components/api-headers-form": "^4.0.0",
+    "@api-components/api-view-model-transformer": "^4.0.0",
     "@api-components/raml-aware": "^3.0.0",
     "lit-element": "^2.0.1",
     "lit-html": "^1.1.2"
   },
   "devDependencies": {
-    "@advanced-rest-client/arc-demo-helper": "^1.0.14",
+    "@advanced-rest-client/arc-demo-helper": "^1.0.15",
     "@advanced-rest-client/eslint-config": "^1.1.3",
     "@advanced-rest-client/prettier-config": "^0.1.0",
     "@advanced-rest-client/testing-karma-sl": "^1.0.5",
-    "@api-components/api-model-generator": "^0.1.13",
-    "@api-components/api-navigation": "^3.1.2",
+    "@api-components/api-model-generator": "^0.2.0-rc.1",
+    "@api-components/api-navigation": "^4.0.0",
     "@commitlint/cli": "^8.2.0",
     "@commitlint/config-conventional": "^8.2.0",
-    "@open-wc/testing": "^2.3.4",
-    "@open-wc/testing-karma": "^3.1.38",
+    "@open-wc/testing": "^2.3.5",
+    "@open-wc/testing-karma": "^3.1.39",
     "@polymer/gen-typescript-declarations": "^1.6.2",
     "@polymer/iron-test-helpers": "^3.0.0",
     "deepmerge": "^4.1.1",
-    "es-dev-server": "^1.18.3",
-    "husky": "^3.0.0",
+    "es-dev-server": "^1.18.4",
+    "husky": "^3.0.9",
     "karma": "^4.3.0",
     "lint-staged": "^9.4.2",
     "sinon": "^7.5.0"
