--- a/package.json
+++ b/package.json
@@ -31,60 +31,58 @@
   "dependencies": {
     "@advanced-rest-client/clipboard-copy": "^3.0.1",
     "@advanced-rest-client/code-mirror": "^3.0.1",
-    "@advanced-rest-client/code-mirror-hint": "^3.0.0",
-    "@advanced-rest-client/events-target-mixin": "^3.0.0",
-    "@advanced-rest-client/headers-parser-mixin": "^3.0.0",
-    "@anypoint-web-components/anypoint-button": "^1.0.12",
+    "@advanced-rest-client/code-mirror-hint": "^3.0.2",
+    "@advanced-rest-client/events-target-mixin": "^3.1.1",
+    "@advanced-rest-client/headers-parser-mixin": "^3.1.0",
+    "@anypoint-web-components/anypoint-button": "^1.0.15",
     "@anypoint-web-components/validatable-mixin": "^1.0.2",
-    "@api-components/amf-helper-mixin": "^4.0.13",
-    "@api-components/api-form-mixin": "^3.0.3",
-    "@api-components/api-headers-form": "^4.0.0",
-    "@api-components/api-view-model-transformer": "^4.0.0",
+    "@api-components/amf-helper-mixin": "^4.1.1",
+    "@api-components/api-form-mixin": "^3.1.0",
+    "@api-components/api-headers-form": "^4.0.3",
+    "@api-components/api-view-model-transformer": "^4.1.1",
     "@api-components/raml-aware": "^3.0.0",
-    "lit-element": "^2.0.1",
-    "lit-html": "^1.1.2"
+    "lit-element": "^2.3.1",
+    "lit-html": "^1.2.1"
   },
   "devDependencies": {
-    "@advanced-rest-client/arc-demo-helper": "^1.0.15",
-    "@advanced-rest-client/eslint-config": "^1.1.3",
+    "@advanced-rest-client/arc-demo-helper": "^2.1.4",
+    "@advanced-rest-client/eslint-config": "^1.1.5",
     "@advanced-rest-client/prettier-config": "^0.1.0",
-    "@advanced-rest-client/testing-karma-sl": "^1.0.5",
-    "@api-components/api-model-generator": "^0.2.0-rc.1",
-    "@api-components/api-navigation": "^4.0.0",
-    "@commitlint/cli": "^8.2.0",
-    "@commitlint/config-conventional": "^8.2.0",
-    "@open-wc/testing": "^2.3.5",
-    "@open-wc/testing-karma": "^3.1.39",
+    "@advanced-rest-client/testing-karma-sl": "^1.2.0",
+    "@api-components/api-model-generator": "^0.2.8",
+    "@api-components/api-navigation": "^4.1.0",
+    "@commitlint/cli": "^8.3.5",
+    "@commitlint/config-conventional": "^8.3.4",
+    "@open-wc/testing": "^2.5.13",
+    "@open-wc/testing-karma": "^3.3.15",
     "@polymer/gen-typescript-declarations": "^1.6.2",
     "@polymer/iron-test-helpers": "^3.0.0",
     "deepmerge": "^4.1.1",
-    "es-dev-server": "^1.18.4",
-    "husky": "^3.0.9",
-    "karma": "^4.3.0",
-    "lint-staged": "^9.4.2",
-    "sinon": "^7.5.0"
+    "es-dev-server": "^1.46.5",
+    "husky": "^4.2.5",
+    "lint-staged": "^10.1.7",
+    "sinon": "^9.0.2"
   },
   "scripts": {
     "test": "karma start --coverage",
     "update-types": "gen-typescript-declarations --deleteExisting --outDir .",
     "start": "es-dev-server --app-index demo/index.html --node-resolve --open --watch",
-    "start:compatibility": "es-dev-server --app-index demo/index.html --compatibility all --node-resolve --open --watch",
+    "start:compatibility": "es-dev-server --app-index demo/index.html --compatibility auto --node-resolve --open --watch",
     "lint:eslint": "eslint --ext .js,.html .",
     "format:eslint": "eslint --ext .js,.html . --fix",
     "lint:prettier": "prettier \"**/*.js\" --list-different || (echo '↑↑ these files are not prettier formatted ↑↑' && exit 1)",
     "format:prettier": "prettier \"**/*.js\" --write",
     "lint": "npm run lint:eslint && npm run lint:prettier",
+    "lint:types": "tsc",
     "format": "npm run format:eslint && npm run format:prettier",
     "test:watch": "karma start --auto-watch=true --single-run=false",
-    "test:legacy": "karma start --compatibility all --coverage",
-    "test:legacy:watch": "karma start --compatibility all --auto-watch=true --single-run=false",
-    "test:sl": "karma start karma.sl.config.js --compatibility all --coverage",
-    "generate-model": "node demo/model.js"
+    "test:sl": "karma start karma.sl.config.js --compatibility auto --coverage",
+    "generate-model": "node demo/model.js",
+    "prepare": "node demo/model.js"
   },
   "lint-staged": {
     "*.js": [
-      "eslint --fix",
-      "git add"
+      "eslint --fix"
     ]
   }
 }
