--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "@api-components/api-headers-editor",
   "description": "HTTP headers form build from AMF json/ld model",
   "version": "4.1.0",
-  "main": "api-headers-editor.js",
+  "main": "index.js",
+  "module": "index.js",
   "license": "Apache-2.0",
   "keywords": [
     "web-components",
@@ -32,13 +33,13 @@
     "@advanced-rest-client/clipboard-copy": "^3.0.1",
     "@advanced-rest-client/code-mirror": "^3.0.1",
     "@advanced-rest-client/code-mirror-hint": "^3.0.2",
-    "@advanced-rest-client/events-target-mixin": "^3.1.1",
-    "@advanced-rest-client/headers-parser-mixin": "^3.1.0",
-    "@anypoint-web-components/anypoint-button": "^1.0.15",
-    "@anypoint-web-components/validatable-mixin": "^1.0.2",
-    "@api-components/amf-helper-mixin": "^4.1.1",
-    "@api-components/api-form-mixin": "^3.1.0",
-    "@api-components/api-headers-form": "^4.1.0",
+    "@advanced-rest-client/events-target-mixin": "^3.2.0",
+    "@advanced-rest-client/headers-parser-mixin": "^3.2.0",
+    "@anypoint-web-components/anypoint-button": "^1.1.1",
+    "@anypoint-web-components/validatable-mixin": "^1.1.1",
+    "@api-components/amf-helper-mixin": "^4.1.2",
+    "@api-components/api-form-mixin": "^3.1.3",
+    "@api-components/api-headers-form": "^4.1.1",
     "@api-components/api-view-model-transformer": "^4.1.1",
     "@api-components/raml-aware": "^3.0.0",
     "lit-element": "^2.3.1",
@@ -46,43 +47,72 @@
   },
   "devDependencies": {
     "@advanced-rest-client/arc-demo-helper": "^2.1.4",
-    "@advanced-rest-client/eslint-config": "^1.1.5",
-    "@advanced-rest-client/prettier-config": "^0.1.0",
-    "@advanced-rest-client/testing-karma-sl": "^1.2.0",
+    "@advanced-rest-client/testing-karma-sl": "^1.3.1",
     "@api-components/api-model-generator": "^0.2.8",
-    "@api-components/api-navigation": "^4.1.0",
-    "@commitlint/cli": "^8.3.5",
-    "@commitlint/config-conventional": "^8.3.4",
-    "@open-wc/testing": "^2.5.13",
-    "@open-wc/testing-karma": "^3.3.15",
-    "@polymer/gen-typescript-declarations": "^1.6.2",
+    "@api-components/api-navigation": "^4.1.1",
+    "@open-wc/eslint-config": "^2.0.0",
+    "@open-wc/testing": "^2.5.16",
+    "@open-wc/testing-karma": "^3.3.23",
     "@polymer/iron-test-helpers": "^3.0.0",
     "deepmerge": "^4.1.1",
-    "es-dev-server": "^1.46.5",
+    "es-dev-server": "^1.50.1",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.11.0",
     "husky": "^4.2.5",
-    "lint-staged": "^10.1.7",
-    "sinon": "^9.0.2"
+    "lint-staged": "^10.2.2",
+    "prettier": "^2.0.5",
+    "sinon": "^9.0.2",
+    "typescript": "^3.9.2",
+    "typescript-lit-html-plugin": "^0.9.0"
   },
   "scripts": {
-    "test": "karma start --coverage",
-    "update-types": "gen-typescript-declarations --deleteExisting --outDir .",
     "start": "es-dev-server --app-index demo/index.html --node-resolve --open --watch",
-    "start:compatibility": "es-dev-server --app-index demo/index.html --compatibility auto --node-resolve --open --watch",
-    "lint:eslint": "eslint --ext .js,.html .",
-    "format:eslint": "eslint --ext .js,.html . --fix",
-    "lint:prettier": "prettier \"**/*.js\" --list-different || (echo '↑↑ these files are not prettier formatted ↑↑' && exit 1)",
-    "format:prettier": "prettier \"**/*.js\" --write",
-    "lint": "npm run lint:eslint && npm run lint:prettier",
+    "lint:eslint": "eslint --ext .js,.html . --ignore-path .gitignore",
+    "format:eslint": "eslint --ext .js,.html . --fix --ignore-path .gitignore",
+    "lint:prettier": "prettier \"**/*.js\" --check --ignore-path .gitignore",
+    "format:prettier": "prettier \"**/*.js\" --write --ignore-path .gitignore",
     "lint:types": "tsc",
+    "lint": "npm run lint:eslint && npm run lint:prettier",
     "format": "npm run format:eslint && npm run format:prettier",
+    "test": "karma start --coverage",
     "test:watch": "karma start --auto-watch=true --single-run=false",
     "test:sl": "karma start karma.sl.config.js --compatibility auto --coverage",
-    "generate-model": "node demo/model.js",
     "prepare": "node demo/model.js"
+  },
+  "eslintConfig": {
+    "extends": [
+      "@open-wc/eslint-config",
+      "eslint-config-prettier"
+    ],
+    "overrides": [
+      {
+        "files": [
+          "**/demo/**/*.js",
+          "**/demo/**/*.html"
+        ],
+        "rules": {
+          "no-console": "off",
+          "no-unused-expressions": "off",
+          "class-methods-use-this": "off",
+          "import/no-extraneous-dependencies": "off"
+        }
+      }
+    ]
+  },
+  "prettier": {
+    "singleQuote": true,
+    "arrowParens": "always"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   },
   "lint-staged": {
     "*.js": [
-      "eslint --fix"
+      "eslint --fix",
+      "prettier --write",
+      "git add"
     ]
   }
 }
