--- a/package.json
+++ b/package.json
@@ -30,53 +30,50 @@
     "email": "arc@mulesoft.com"
   },
   "dependencies": {
-    "@advanced-rest-client/clipboard-copy": "^3.0.1",
-    "@advanced-rest-client/code-mirror": "^3.1.4",
+    "@advanced-rest-client/clipboard-copy": "^3.1.0",
+    "@advanced-rest-client/code-mirror": "^3.1.5",
     "@advanced-rest-client/code-mirror-hint": "^3.0.2",
-    "@advanced-rest-client/events-target-mixin": "^3.2.3",
+    "@advanced-rest-client/events-target-mixin": "^3.2.4",
     "@advanced-rest-client/headers-parser-mixin": "^3.2.0",
-    "@anypoint-web-components/anypoint-button": "^1.1.1",
+    "@anypoint-web-components/anypoint-button": "^1.2.3",
     "@anypoint-web-components/validatable-mixin": "^1.1.3",
-    "@api-components/amf-helper-mixin": "^4.3.2",
-    "@api-components/api-form-mixin": "^3.1.3",
+    "@api-components/amf-helper-mixin": "^4.5.12",
+    "@api-components/api-form-mixin": "^3.1.4",
     "@api-components/api-headers-form": "^4.1.3",
     "@api-components/api-view-model-transformer": "^4.2.2",
     "@api-components/raml-aware": "^3.0.0",
-    "lit-element": "^2.4.0",
-    "lit-html": "^1.3.0"
+    "lit-element": "^2.5.1",
+    "lit-html": "^1.4.1"
   },
   "devDependencies": {
-    "@advanced-rest-client/arc-demo-helper": "^2.2.4",
-    "@advanced-rest-client/testing-karma-sl": "^1.4.3",
-    "@api-components/api-model-generator": "^0.2.9",
-    "@api-components/api-navigation": "^4.2.4",
-    "@open-wc/eslint-config": "^4.2.0",
-    "@open-wc/testing": "^2.5.32",
-    "@open-wc/testing-karma": "^4.0.9",
+    "@advanced-rest-client/arc-demo-helper": "^3.0.3",
+    "@api-components/api-model-generator": "^0.2.14",
+    "@api-components/api-navigation": "^4.3.2",
+    "@open-wc/eslint-config": "^4.3.0",
+    "@open-wc/testing": "^2.5.33",
     "@polymer/iron-test-helpers": "^3.0.0",
-    "deepmerge": "^4.1.1",
-    "es-dev-server": "^2.0.2",
-    "eslint": "^7.17.0",
-    "eslint-config-prettier": "^7.1.0",
-    "husky": "^4.3.7",
-    "lint-staged": "^10.5.3",
-    "prettier": "^2.2.1",
-    "sinon": "^9.2.3",
-    "typescript": "^4.1.3",
+    "@web/dev-server": "^0.1.24",
+    "@web/test-runner": "^0.13.18",
+    "@web/test-runner-playwright": "^0.8.4",
+    "eslint": "^7.20.0",
+    "eslint-config-prettier": "^8.1.0",
+    "husky": "^7.0.1",
+    "lint-staged": "^11.0.1",
+    "sinon": "^11.1.1",
+    "typescript": "^4.2.2",
     "typescript-lit-html-plugin": "^0.9.0"
   },
   "scripts": {
-    "start": "es-dev-server --app-index demo/index.html --node-resolve --open --watch",
+    "start": "web-dev-server --app-index demo/index.html --node-resolve --open --watch --root-dir .",
     "lint:eslint": "eslint --ext .js,.html . --ignore-path .gitignore",
     "format:eslint": "eslint --ext .js,.html . --fix --ignore-path .gitignore",
-    "lint:prettier": "prettier \"**/*.js\" --check --ignore-path .gitignore",
-    "format:prettier": "prettier \"**/*.js\" --write --ignore-path .gitignore",
     "lint:types": "tsc",
-    "lint": "npm run lint:eslint && npm run lint:prettier",
-    "format": "npm run format:eslint && npm run format:prettier",
-    "test": "karma start --coverage",
-    "test:watch": "karma start --auto-watch=true --single-run=false",
-    "test:sl": "karma start karma.sl.config.js --compatibility auto --coverage",
+    "lint": "npm run lint:eslint",
+    "format": "npm run format:eslint",
+    "test": "web-test-runner test/**/*.test.js --coverage --node-resolve --playwright --browsers chromium webkit",
+    "test:all": "web-test-runner test/**/*.test.js --coverage --node-resolve --playwright --browsers chromium firefox webkit",
+    "test:watch": "web-test-runner --node-resolve --watch --playwright --browsers chromium",
+    "gen:wc": "wca analyze \"*.js\" --outFile custom-elements.json",
     "prepare": "node demo/model.js"
   },
   "eslintConfig": {
@@ -87,21 +84,20 @@
     "overrides": [
       {
         "files": [
-          "**/demo/**/*.js",
+          "demo/**/*.js",
+          "test/**/*.js",
           "**/demo/**/*.html"
         ],
         "rules": {
           "no-console": "off",
           "no-unused-expressions": "off",
+          "no-plusplus": "off",
+          "no-param-reassing": "off",
           "class-methods-use-this": "off",
           "import/no-extraneous-dependencies": "off"
         }
       }
     ]
-  },
-  "prettier": {
-    "singleQuote": true,
-    "arrowParens": "always"
   },
   "husky": {
     "hooks": {
@@ -110,9 +106,7 @@
   },
   "lint-staged": {
     "*.js": [
-      "eslint --fix",
-      "prettier --write",
-      "git add"
+      "eslint --fix"
     ]
   }
 }
